exo package remove sourcepath resolver
Summary:
^

Remove sourcepath resolver from exo package info processing.

A new `IsolatedExopackageInfo` for `ExopackageInfo` that didn't have any references to SourcePath objects and holds only AbsPaths.

Reviewed By: IanChilds

fbshipit-source-id: 7cf7b9f443721993fb926f543298ba3c7c1679d3